# POC-bitbucket-automation

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
sample_artefacts/report/: report.html  report.xml
sample_artefacts/test_change_code_via_ui-chromium/: FIXTURE  GENERATOR  PAGE
src/fixtures/: api_fixtures.py
src/helpers/: api_client.py  bitbucket_api.py  generators.py  git_helper.py  requests_filtering.py
src/pages/: base_page.py  fa_popup_po.py  login_page.py  top_bar.py
src/pages/dashboard/: dashboard_page.py
src/pages/repository/: repositories_list_page.py  repository_create_form_page.py
src/pages/repository/repository_page/: branches_po.py  commit_popup_po.py  create_branch_po.py  file_edit_po.py  file_view_po.py  merge_modal_po.py  repository_page.py  repository_sidebar_po.py  source_po.py
src/payloads/: README.md
src/tests/: bitbucket_test.py  conftest.py
